[package]
name = "touch_event"
version = "0.1.3"
edition = "2021"
description = "Use a daemon to monitor the touch screen status of linux devices"
repository = "https://github.com/shadow3aaa/touch_event"
license = "WTFPL"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic = "0.5.3"
evdev = "0.12.1"
